GTK4-Konverter/header/gtk/gtkentrybuffer.h

/* Maximum size of text buffer, in bytes */
#define GTK_ENTRY_BUFFER_MAX_SIZE        G_MAXUSHORT
#define GTK_TYPE_ENTRY_BUFFER            (gtk_entry_buffer_get_type ())
#define GTK_ENTRY_BUFFER(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_ENTRY_BUFFER, GtkEntryBuffer))
#define GTK_ENTRY_BUFFER_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST ((klass), GTK_TYPE_ENTRY_BUFFER, GtkEntryBufferClass))
#define GTK_IS_ENTRY_BUFFER(obj)         (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GTK_TYPE_ENTRY_BUFFER))
#define GTK_IS_ENTRY_BUFFER_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_ENTRY_BUFFER))
#define GTK_ENTRY_BUFFER_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_ENTRY_BUFFER, GtkEntryBufferClass))
typedef struct _GtkEntryBuffer            GtkEntryBuffer;
typedef struct _GtkEntryBufferClass       GtkEntryBufferClass;
GType                     gtk_entry_buffer_get_type               (void) G_GNUC_CONST;
GtkEntryBuffer*           gtk_entry_buffer_new                    (const char      *initial_chars,
                                                                   int              n_initial_chars);
gsize                     gtk_entry_buffer_get_bytes              (GtkEntryBuffer  *buffer);
guint                     gtk_entry_buffer_get_length             (GtkEntryBuffer  *buffer);
const char *              gtk_entry_buffer_get_text               (GtkEntryBuffer  *buffer);
void                      gtk_entry_buffer_set_text               (GtkEntryBuffer  *buffer,
                                                                   const char      *chars,
                                                                   int              n_chars);
void                      gtk_entry_buffer_set_max_length         (GtkEntryBuffer  *buffer,
                                                                   int              max_length);
int                       gtk_entry_buffer_get_max_length         (GtkEntryBuffer  *buffer);
guint                     gtk_entry_buffer_insert_text            (GtkEntryBuffer  *buffer,
                                                                   guint            position,
                                                                   const char      *chars,
                                                                   int              n_chars);
guint                     gtk_entry_buffer_delete_text            (GtkEntryBuffer  *buffer,
                                                                   guint            position,
                                                                   int              n_chars);
void                      gtk_entry_buffer_emit_inserted_text     (GtkEntryBuffer  *buffer,
                                                                   guint            position,
                                                                   const char      *chars,
                                                                   guint            n_chars);
void                      gtk_entry_buffer_emit_deleted_text      (GtkEntryBuffer  *buffer,
                                                                   guint            position,
                                                                   guint            n_chars);